VCFDirectSVComparaison:Added new benchmark statistics; Variant Caller:Fixed time performance issue, changed signature implementation to GenomicRegion objects